<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.atecdroid.project20.Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="44sp"
                android:textColor="@color/Red"
                android:layout_marginTop="60dp"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:hint="@string/User"
                android:gravity="center"
                android:layout_marginTop="80dp"
                android:id="@+id/tfUser"
                android:singleLine="true"
                android:text="root"
                />

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:hint="@string/Pass"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/tfPass"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="pass"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:layout_marginTop="50dp"
                android:background="@color/Red"
                android:textColor="#fff"
                android:onClick="loginClick"
                android:layout_marginBottom="80dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Registar"
                android:textSize="18sp"
                android:onClick="signUp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>